[package]
name = "native_api_1c"
version = "0.10.6"
edition = "2021"
repository = "https://github.com/Sebekerga/native_api_1c"
license = "MIT"
description = "Main library for Native API 1C"
readme = "../README.md"

[dependencies]
native_api_1c_core = { path = "../native_api_1c_core" }
native_api_1c_macro = { path = "../native_api_1c_macro" }

[features]
default = ["macro"]
macro = []
