[package]
name = "native_api_1c_macro"
version = "0.10.4"
edition = "2021"
repository = "https://github.com/Sebekerga/native_api_1c_macro"
license = "MIT"
description = "Macro library for Native API 1C"

[[test]]
name = "readme_example"
path = "tests/readme.rs"

[[test]]
name = "functions"
path = "tests/functions.rs"

[[test]]
name = "props"
path = "tests/props.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"

[dev-dependencies]
native_api_1c = { git = "https://github.com/Sebekerga/native_api_1c" }
trybuild = { version = "1.0.49", features = ["diff"] }
utf16_lit = "2.0"
chrono = "0.4.26"
