[package]
name = "native_api_1c_macro"
version = "0.10.4"
edition = "2021"
repository = "https://github.com/Sebekerga/native_api_1c"
license = "MIT"
description = "Macro library for Native API 1C"

[[test]]
name = "trybuild"
path = "tests/trybuild/tests.rs"

[[test]]
name = "props_interface"
path = "tests/interface/props.rs"

[[test]]
name = "functions_interface"
path = "tests/interface/functions.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = ["default", "printing"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"
darling = "0.20.3"

[dev-dependencies]
native_api_1c = { path = "../native_api_1c" }
trybuild = { version = "1.0.49", features = ["diff"] }
utf16_lit = "2.0"
chrono = "0.4.26"
rstest = "0.21.0"
